[project]
name = "dunk"
version = "0.4.0a0"
description = "Beautiful side-by-side diffs in your terminal"
authors = [
    {name = "Darren Burns", email = "darrenb900@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["diff", "terminal", "side-by-side", "git", "cli", "dev-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

requires-python = ">=3.11"
dependencies = [
    "unidiff>=0.7",
    "rich>=12.1.0"
]

[project.scripts]
dunk = "src.dunk:main"

[project.urls]
homepage = "https://github.com/darrenburns/dunk"
repository = "https://github.com/darrenburns/dunk"
issues = "https://github.com/darrenburns/dunk/issues"
documentation = "https://github.com/darrenburns/dunk/blob/main/README.md"

[tool.uv]
dev-dependencies = [
    "pytest",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dunk"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"